--- a/new/requirements.txt
+++ b/new/requirements.txt
@@ -4,8 +4,8 @@ plotly    # For interactive visualizations
 plotly
 pandas     # For data manipulation and analysis
 numpy      # For numerical operations
-requests   # For making HTTP requests (for API integrations)
-
+requests # For making HTTP requests (for API integrations)
+matplotlib
 # Additional packages for ERP and eCommerce integrations
 # Replace these with the actual packages you plan to use
 # For example, you might need specific SDKs or APIs for integration
